# n-apsak

./: .gitignore  Dockerfile  README.md  app.py  package-lock.json  pyproject.toml
backend/: app.py  database.py
backend/auth/: auth.py
backend/models/: __init__.py  plan.py  user.py
backend/routers/: auth.py  user.py
backend/schemas/: user.py
frontend/: App.js  App.tsx  app.json  index.tsx  package-lock.json  package.json
frontend/src/api/: auth.ts  user.ts
frontend/src/components/: GoogleLoginButton.tsx
frontend/src/context/: PlanContext.tsx  UserContext.tsx
frontend/src/navigation/: AppNavigator.tsx  MainTabNavigator.tsx
frontend/src/screens/: AdviceScreen.tsx  CommunityScreen.tsx  FeedScreen.tsx  LoginScreen.tsx  PlanScreen.tsx  ProfileScreen.tsx
frontend/src/screens/onboarding/: OnboardingScreen.tsx
frontend/src/screens/planning_screens/forms/: PlanFormScreen.tsx
