[project]
name = "n-apsak"
version = "0.1.0"
description = ""
authors = [
    {name = "pasansancak"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-auth (>=2.40.2,<3.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
